tests/ui/define-function.goml
// This test ensures that the line of `define-function` is used and not the last command
// within it (so line 4 in this test).

define-function: (
//~^ ERROR: expected an array, found `()` (a tuple) (second element of the tuple)
    "check_title_position",
    (),
    block {
        store-position: (".example-wrap.scraped-example .src-line-numbers", {"x": x, "y": y})
        store-size: (".example-wrap.scraped-example .scraped-example-title", { "height": title_height })

        assert-position: (".example-wrap.scraped-example .scraped-example-title", {
            "x": |x|, // same X position.
            "y": |y| - |title_height|,
        })
    }
)
